crates/tui/tests/storybook/snapshots/app_prompt::exec_command_block_with_output.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 396
expression: frame.text()
---

 !ls -1 src

  lib.rs
  main.rs
  parser.rs

  tip ctrl+enter / ctrl+q, steer the current re…
──────────────────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
