crates/tui/tests/storybook/snapshots/app_prompt::exec_command_block_with_output.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 385
expression: frame.styles_text()
---
dim: 50 12
  0   0  49 bg=AnsiValue(236)
  1   0   1 bg=AnsiValue(236)
  1   1   1 fg=AnsiValue(197) bg=AnsiValue(236) attrs=bold
  1   2   9 bg=AnsiValue(236) attrs=bold
  1  11  38 bg=AnsiValue(236)
  2   0  49 bg=AnsiValue(236)
  3   0   8 attrs=dim
  4   0   9 attrs=dim
  5   0  11 attrs=dim
  8   0  50 fg=AnsiValue(237)
  9   1   1 fg=Black bg=White
 10   0  50 fg=AnsiValue(237)
 11   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 11  10  32 bg=AnsiValue(233)
 11  42   8 fg=AnsiValue(244) bg=AnsiValue(233)
