crates/tui/tests/storybook/snapshots/app_prompt::prompt_centered_picker_with_notification.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---


 alpha  first
 beta   second
 gamma  third

──────────────────────────────────────────────────
 ○ normal                                   1:1 0%
