crates/tui/tests/storybook/snapshots/app_prompt::prompt_compacting_hides_stale_token_counter.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
─────── compacting ────────



─ ✿ compacting… ────────────

────────────────────────────
 ○ normal           1:1 100%
