crates/tui/tests/storybook/snapshots/app_prompt::prompt_compacting_keeps_context_token_counter.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
─────── compacting ────────



─ ✿ ────────── 19.5k (78%) ─

────────────────────────────
 ○ normal           1:1 100%
