crates/tui/tests/storybook/snapshots/app_prompt::prompt_compacting_keeps_context_token_counter.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 28 8
  0   0  27 attrs=dim
  4   0   1 fg=AnsiValue(237)
  4   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
  4   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
  4   4  10 fg=AnsiValue(237)
  4  14  12 fg=AnsiValue(244)
  4  27   1 fg=AnsiValue(237)
  5   1   1 fg=Black bg=White
  6   0  28 fg=AnsiValue(237)
  7   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  7  10  10 bg=AnsiValue(233)
  7  20   8 fg=AnsiValue(244) bg=AnsiValue(233)
