crates/tui/tests/storybook/snapshots/app_prompt::prompt_compacting_keeps_token_counter_visible.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 384
expression: frame.text()
---




─✿compacting…  19.5k (78%) ─

────────────────────────────
 ○ normal           1:1 100%
