crates/tui/tests/storybook/snapshots/app_prompt::prompt_file_completion_with_error_notification.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 515
expression: frame.text()
---

 src/main.rs
 src
  error  file lookup failed
──────────────────────────────────────────────────
 @
──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
