crates/tui/tests/storybook/snapshots/app_prompt::prompt_file_completion_with_error_notification.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 50 8
  3   2   5 fg=AnsiValue(9) attrs=bold
  3   9  18 attrs=dim
  4   0  50 fg=AnsiValue(237)
  5   2   1 fg=Black bg=White
  6   0  50 fg=AnsiValue(237)
  7   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  7  10  32 bg=AnsiValue(233)
  7  42   8 fg=AnsiValue(244) bg=AnsiValue(233)
